--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,19 @@
 			content="Web site created using create-react-app"
 		/>
 
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600;1,700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Roboto:wght@100;300;400;500;700;900&family=Varela&family=Varela+Round&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
 		/>
 		<style>
 			* {
-				font-family: "Nunito", sans-serif;
 				margin: 0;
+				font-family: "Source Code Pro", monospace;
 			}
 		</style>
-		<title>Admin tracker App</title>
+		<title>Admin tracker</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
